# nsv-duckdb

./: .gitignore  .gitmodules  BUILDING.md  CI_AUDIT.md  CMakeLists.txt  LICENSE  Makefile  README.md  bench.sql  demo.py  extension_config.cmake  nsv_duckdb.py  nsv_ext.py  requirements.txt  test.py  test_ffi.c  vcpkg.json
.github/scripts/: duckdb-worker-bridge.cjs  wasm_smoke_test.mjs
.github/workflows/: MainDistributionPipeline.yml  NsvBuild.yml  WasmSmokeTest.yml
bench/: filter_prune_bench.sql
benchmarks/: bench_inproc.sql  bench_queries.sql  bench_scan.sql  bench_threads.sql  bench_varied.sql  gen_data.py  gen_data.sql  gen_varied_data.py  run_benchmark.sh  run_optimized_bench.sh  run_zerocopy_bench.sh
examples/: complex.nsv  sales.nsv  simple.nsv  users.nsv
notes/: cow-zero-copy-benchmarks.md  duckdb-1.5.0-upgrade.md  duckdb-extension-and-rust-lib.md  filter-pushdown-benchmarks.md  filter-pushdown-progress.md
rust-ffi/: Cargo.toml
rust-ffi/benches/: ffi_bench.rs
rust-ffi/nsv-vendored/: Cargo.toml
rust-ffi/nsv-vendored/src/: lib.rs
rust-ffi/src/: lib.rs
rust-glue/: Cargo.toml  nsv.h
rust-glue/src/: lib.rs
scripts/: wasm-opt-wrapper.sh
src/: nsv_extension.cpp
src/include/: nsv_extension.hpp  nsv_ffi.h
test/sql/: nsv.test  nsv_type_narrowing.test  smoke.test
