[package]
name = "nsv"
version = "0.0.11"
edition = "2021"
description = "NSV (Newline-Separated Values) format parser and encoder"
license = "MIT"
repository = "https://github.com/nsv-format/nsv-rust"

[dependencies]
rayon = { version = "1.10", optional = true }
memchr = "2.7"

[features]
default = ["rayon"]
